Finished entire studio

--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,20 @@
 <h3>Equipment</h3>
 <ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+   <li *ngFor="let equip of equipment">
+
+      <span *ngIf="equipmentBeingEdited !== equip; else elseBlock">
+         <!-- display state of member -->
+         <span (click)="edit(equip)" class="editable-text">{{equip}}</span>
+         <button (click)="remove(equip)">remove</button>
+      </span>
+
+      <ng-template #elseBlock>
+        <!-- edit state of member -->
+        <input #updatedName (keyup.enter)="save(equip, updatedName.value, equip)" value="{{equip}}"/>
+        <button (click)="save(equip, updatedName.value, equip)">save</button>
+      </ng-template>
+
+   </li>
 </ul>
+<input #equipmentName type="text"/>
+<button (click)="add(equipmentName.value)">Add</button>
